--- a/HoofdCss.css
+++ b/HoofdCss.css
@@ -114,7 +114,7 @@
 
 /* Projecten */
 #Foto1{
-    margin-left: 150px;
+    margin-left: 75px;
     box-shadow: 10px 10px 5px grey;
 }
 
@@ -123,7 +123,7 @@
 }
 
 #Foto3{
-    margin-left: 150px;
+    margin-left: 75px;
     box-shadow: 10px 10px 5px grey;
 }
 
@@ -131,19 +131,19 @@
     max-height: 555px;
 }
 
-.project1Tekst{
-    padding-top: 200px;
-    margin-right: 60px;
-}
-
-.project2Tekst{
-    padding-top: 200px;
+.projectTekst{
     margin-left: 60px;
+    text-align: left;
 }
 
 #EndFoto{
-    margin-bottom: 15px;
+    margin-bottom: -100px;
 }
+
+#projecten div{
+    padding-bottom: 80px;
+}
+/* TODO: klein scherm tekst margin-left 10 px zetten. */
 /* Projecten */
 
 
