--- a/HoofdCss.css
+++ b/HoofdCss.css
@@ -133,6 +133,7 @@
 
 .projectTekst{
     margin-left: 60px;
+    margin-top: 200px;
     text-align: left;
 }
 
@@ -143,7 +144,6 @@
 #projecten div{
     padding-bottom: 80px;
 }
-/* TODO: klein scherm tekst margin-left 10 px zetten. */
 /* Projecten */
 
 
@@ -186,4 +186,11 @@
   .tekstCenter {
     text-align: center;
   }
+  
+  .projectTekst{
+      margin-left: 10px;
+      margin-top: 0px;
+  }
+  
 }
+
